<resources>
    <string name="app_name">Treasure Tracker for Detectorists</string>
    <string name="admob_app_id">ca-app-pub-9595024238231934~8798865468</string>
    <string name="banner_ad_unit_id">ca-app-pub-9595024238231934/7567698365</string>
    <string name="test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_sortby">Sort By</string>
    <string name="action_edit">Edit</string>
    <string name="action_share">Share treasure</string>
    <string name="action_add_next">Next</string>
    <string name="country_prompt">Choose a country</string>
    <string-array name="countries_array">
        <item>United States</item>
        <item>Custom…</item>
    </string-array>
    <string name="uscointype_prompt">Choose a U.S. coin</string>
    <string-array name="uscoin_type_array">
        <item>1-cent (Penny)</item>
        <item>5-cent (Nickel)</item>
        <item>10-cent (Dime)</item>
        <item>25-cent (Quarter)</item>
        <item>50-cent (Half dollar)</item>
        <item>100-cent (Dollar)</item>
        <item>Custom…</item>
    </string-array>
    <string name="uscoin_penny_series_prompt">Choose a design:</string>
    <string-array name="uscoin_penny_series_array">
        <item>Lincoln Union Shield</item>
        <item>Lincoln Bicentennial 4 Reverse designs</item>
        <item>Lincoln Memorial</item>
        <item>Lincoln Wheat</item>
        <item>Indian Head</item>
        <item>Flying Eagle</item>
        <item>Braided Hair (Large)</item>
        <item>Coronet (Large)</item>
        <item>Classic Head (Large)</item>
        <item>Draped Bust (Large)</item>
        <item>Liberty Cap (Large)</item>
        <item>Flowing Hair Wreath (Large)</item>
        <item>Flowing Hair Chain (Large)</item>
        <item>Custom…</item>
    </string-array>
    <string-array name="uscoin_nickel_series_array">
        <item>Jefferson</item>
        <item>Buffalo</item>
        <item>V</item>
        <item>Shield</item>
        <item>Custom…</item>
    </string-array>
    <string-array name="uscoin_dime_series_array">
        <item>Roosevelt</item>
        <item>Mercury</item>
        <item>Barber</item>
        <item>Seated (Legend)</item>
        <item>Seated (Stars)</item>
        <item>Seated (No Stars)</item>
        <item>Custom…</item>
    </string-array>
    <string-array name="uscoin_quarter_series_array">
        <item>America the Beautiful</item>
        <item>50 State</item>
        <item>Washington</item>
        <item>Bicentennial</item>
        <item>Standing Liberty</item>
        <item>Barber</item>
        <item>Seated Liberty</item>
        <item>Capped Bust</item>
        <item>Draped Bust</item>
        <item>Custom…</item>
    </string-array>
    <string-array name="uscoin_halfdollar_series_array">
        <item>Kennedy</item>
        <item>Bicentennial</item>
        <item>Franklin</item>
        <item>Walking Liberty</item>
        <item>Barber</item>
        <item>Seated Liberty</item>
        <item>Capped Bust</item>
        <item>Early Bust</item>
        <item>Custom…</item>
    </string-array>
    <string-array name="uscoin_dollar_series_array">
        <item>Presidential</item>
        <item>Sacagawea</item>
        <item>Susan B. Anthony</item>
        <item>Eisenhower</item>
        <item>Peace</item>
        <item>Morgan</item>
        <item>Trade</item>
        <item>Gold</item>
        <item>Seated Liberty</item>
        <item>Bust</item>
        <item>Custom…</item>
    </string-array>
    <string name="material_prompt">Choose a material type</string>
    <string-array name="coin_material_array">
        <item>Copper-Nickel</item>
        <item>Silver 90%</item>
        <item>Silver 40%</item>
        <item>Silver 35%</item>
        <item>Zinc</item>
        <item>Aluminum</item>
        <item>Copper</item>
        <item>Steel</item>
        <item>Bronze</item>
        <item>Gold</item>
        <item>Custom…</item>
    </string-array>
    <string-array name="token_material_array">
        <item>Aluminum</item>
        <item>Copper</item>
        <item>Iron</item>
        <item>Brass</item>
        <item>Silver 92.5%</item>
        <item>Custom…</item>
    </string-array>
    <string-array name="jewelry_material_array">
        <item>Silver 92.5%</item>
        <item>Copper</item>
        <item>Platinum</item>
        <item>Gold 10k</item>
        <item>Gold 14k</item>
        <item>Gold 18k</item>
        <item>Stainless Steel</item>
        <item>Brass</item>
        <item>Costume</item>
        <item>Custom…</item>
    </string-array>
    <string-array name="relic_material_array">
        <item>Aluminum</item>
        <item>Copper</item>
        <item>Iron</item>
        <item>Brass</item>
        <item>Custom…</item>
    </string-array>
    <string name="mint_prompt">Choose a mint mark</string>
    <string-array name="uscoin_mint_array">
        <item>None</item>
        <item>D (Denver)</item>
        <item>S (San Francisco)</item>
        <item>CC (Carson City)</item>
        <item>O (New Orleans)</item>
        <item>W (West Point)</item>
        <item>C (Charlotte)</item>
        <item>P (Philadelphia)</item>
        <item>D (Dahlonega)</item>
        <item>M (Manila)</item>
        <item>Custom…</item>
    </string-array>
    <string name="defaultSortType">TreasureID</string>
    <string-array name="sortTypes">
        <item>Treasure Amount</item>
        <item>Treasure Country</item>
        <item>Treasure Maker</item>
        <item>Treasure Material</item>
        <item>Treasure Weight</item>
        <item>Treasure Year</item>
        <item>Treasure Location Found</item>
        <item>Treasure Date Found</item>
        <item>Most Recently Added</item>
    </string-array>
    <string-array name="clad_currency_array">
        <item>(USD)</item>
        <item>(EUR)</item>
        <item>(CAD)</item>
        <item>(JPY)</item>
        <item>(MEX)</item>
        <item>Custom…</item>
    </string-array>
    <string name="weight_unit_prompt">Choose a weight unit</string>
    <string-array name="jewelry_weight_unit_array">
        <item>Grams (g)</item>
        <item>Ounces (oz.)</item>
        <item>Pounds (lbs)</item>
        <item>Kilograms (kg)</item>
        <item>Custom…</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="backup_header">Backup / Restore / Export</string>
    <string name="clear_header">Fast Clear</string>
    <string name="info_header">Additional Info</string>
    <string name="backup_title">Backup Treasures</string>
    <string name="restore_title">Restore Treasures</string>
    <string name="fastclear">Fast Clear Treasures</string>
    <string name="clear_coins_title">Delete All Coins</string>
    <string name="clear_tokens_title">Delete All Tokens</string>
    <string name="clear_jewelry_title">Delete All Jewelry</string>
    <string name="clear_relics_title">Delete All Relics</string>
    <string name="clear_clad_title">Delete All Clad</string>
    <string name="clear_collections_title">Delete All Collections</string>
    <string name="clear_all_title">Delete All</string>
    <string name="backup_summary">Creates a backup file to transfer to a new device</string>
    <string name="restore_summary">Accepts a created backup file</string>
    <string name="csv_export_summary">Export to readable/printable format (.csv)</string>
    <string name="fastclear_summary">Permanently delete groups of added treasures</string>
    <string name="clear_coins_summary">Permanently delete all added coins</string>
    <string name="clear_tokens_summary">Permanently delete all added tokens</string>
    <string name="clear_jewelry_summary">Permanently delete all added jewelry</string>
    <string name="clear_relics_summary">Permanently delete all added relics</string>
    <string name="clear_clad_summary">Permanently delete all added clad</string>
    <string name="clear_collections_summary">Permanently delete all added collections</string>
    <string name="clear_all_summary">Permanently delete all added in above categories</string>
    <string name="clear_warning"><![CDATA[WARNING: Use Fast Clear with caution! All deletions are permanent. Make a backup first if you are not sure what these do.\n\n
        To delete individual treasures instead…  touch & hold on a treasure on the treasure list grid.]]></string>
    <string name="csv_export_title">Export Treasures</string>
    <string name="what_type_of_treasure_do_you_want_to_add">What type of treasure do you want to add?</string>
    <string name="coin">Coin</string>
    <string name="token">Token</string>
    <string name="jewelry">Jewelry</string>
    <string name="relic">Relic</string>
    <string name="clad">Clad</string>
    <string name="collection">Collection</string>
    <string name="treasures">Treasures</string>
    <string name="summary">Summary</string>
    <string name="coins">Coins</string>
    <string name="tokens">Tokens</string>
    <string name="relics">Relics</string>
    <string name="other">Other</string>
    <string name="collections">Collections</string>
    <string name="locations">Locations</string>
    <string name="detectors">Detectors</string>
    <string name="treasure_photos">Treasure Photos:</string>
    <string name="treasure_info">Treasure Info:</string>
    <string name="_0_00">0.00</string>
    <string name="usd">USD</string>
    <string name="_01_01_1988">01/01/1988</string>
    <string name="location_found">Location Found:</string>
    <string name="amount">Amount:</string>
    <string name="include_the_location_of_your_find">Include the location of your find</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="date_found">Date Found:</string>
    <string name="include_the_date_of_your_find">Include the date of your find</string>
    <string name="country">Country:</string>
    <string name="denomination">Denomination:</string>
    <string name="choose_a_denomination">Choose a denomination</string>
    <string name="design_series">Design/Series:</string>
    <string name="choose_a_design">Choose a design</string>
    <string name="year">Year:</string>
    <string name="choose_a_mint">Choose a mint</string>
    <string name="material">Material:</string>
    <string name="year_hint">Year</string>
    <string name="mint">Mint:</string>
    <string name="name">Name:</string>
    <string name="include_a_name_for_your_collection">Include a name for your collection</string>
    <string name="include_a_location_for_your_find">Include a location for your find</string>
    <string name="additional_info">Additional Info:</string>
    <string name="include_any_additional_info_about_your_find">Include any additional info about your find</string>
    <string name="item">Item:</string>
    <string name="item_hint">Item</string>
    <string name="design_series_hint">Design/Series</string>
    <string name="weight_amount">Weight (Amount):</string>
    <string name="weight_unit">Weight (Unit):</string>
    <string name="weight">Weight</string>
    <string name="coins_summary">Coins:</string>
    <string name="tokens_summary">Tokens:</string>
    <string name="jewelry_summary">Jewelry:</string>
    <string name="relics_summary">Relics:</string>
    <string name="total_summary">Total:</string>
    <string name="clad_totals">Clad:</string>
    <string name="collections_summary">Collections:</string>
    <string name="all_time"> All-time:</string>
    <string name="version_info_title">Version:</string>
    <string name="version_info_summary">N/A</string>
    <string name="app_info_title">About this App</string>
    <string name="app_info_summary">More about Treasure Tracker for Detectorists</string>
</resources>