<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/clear_warning">

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/clear_header">

        <Preference
            app:key="clearcoins"
            app:title="@string/clear_coins_title"
            app:summary="@string/clear_coins_summary"/>
        <Preference
            app:key="cleartokens"
            app:title="@string/clear_tokens_title"
            app:summary="@string/clear_tokens_summary"/>
        <Preference
            app:key="clearjewelry"
            app:title="@string/clear_jewelry_title"
            app:summary="@string/clear_jewelry_summary"/>
        <Preference
            app:key="clearrelics"
            app:title="@string/clear_relics_title"
            app:summary="@string/clear_relics_summary"/>
        <Preference
            app:key="clearclad"
            app:title="@string/clear_clad_title"
            app:summary="@string/clear_clad_summary"/>
        <Preference
            app:key="clearcollections"
            app:title="@string/clear_collections_title"
            app:summary="@string/clear_collections_summary"/>
        <Preference
        app:key="clearall"
        app:title="@string/clear_all_title"
        app:summary="@string/clear_all_summary"/>

    </PreferenceCategory>
</PreferenceScreen>
