<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/backup_header">

        <Preference
            app:key="backup"
            app:title="@string/backup_title"
            app:summary="@string/backup_summary"/>

        <Preference
            app:key="restore"
            app:title="@string/restore_title"
            app:summary="@string/restore_summary"/>

        <Preference
            app:key="export"
            app:title="@string/csv_export_title"
            app:summary="@string/csv_export_summary"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/clear_header">

        <Preference
            app:key="fastclear"
            app:title="@string/fastclear"
            app:summary="@string/fastclear_summary"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/info_header">

        <Preference
            app:key="versionName"
            app:title="@string/version_info_title"
            app:summary="@string/version_info_summary"/>

        <Preference
            app:key="aboutApp"
            app:title="@string/app_info_title"
            app:summary="@string/app_info_summary"/>



    </PreferenceCategory>

</PreferenceScreen>
