<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/treasures">
    <menu>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_summary"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/summary" />
        <item
            android:id="@+id/nav_coins"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/coins" />
        <item
            android:id="@+id/nav_tokens"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/tokens" />
        <item
            android:id="@+id/nav_jewelry"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/jewelry" />
        <item
            android:id="@+id/nav_relics"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/relics" />
        <item
            android:id="@+id/nav_clad"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/clad" />
    </group>
    </menu>
    </item>
    <item android:title="@string/other">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_collection"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/collections" />
            </group>

            <item
                android:id="@+id/nav_locations"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/locations" />

            <item
                android:id="@+id/nav_detectors"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/detectors" />
        </menu>
    </item>

</menu>
