<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/collectionNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/name" />
        <EditText
            android:id="@+id/collectionNameEditText"
            android:layout_width="match_parent"
            android:background="@drawable/shadow_14"
            android:autoSizeTextType="uniform"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="30dp"
            android:paddingTop="10dp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeStepGranularity="2sp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:hint="@string/include_a_name_for_your_collection"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_found" />
        <EditText
            android:id="@+id/treasureLocationEditText"
            android:layout_width="match_parent"
            android:background="@drawable/shadow_14"
            android:autoSizeTextType="uniform"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="30dp"
            android:paddingTop="10dp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeStepGranularity="2sp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:minLines="1"
            android:hint="@string/include_a_location_for_your_find"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:inputType="text" />

        <Button
            android:id="@+id/placePickerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_current_location"
            android:background="@drawable/shadow_13"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_found" />


        <TextView
            android:id="@+id/treasureDateFoundTextView"
            android:layout_width="match_parent"
            android:background="@drawable/shadow_13"
            android:autoSizeTextType="uniform"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeStepGranularity="2sp"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/include_the_date_of_your_find"
            tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additional_info" />

        <EditText
            android:id="@+id/treasureInfoEditText"
            android:layout_width="match_parent"
            android:background="@drawable/shadow_13"
            android:autoSizeTextType="uniform"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="40dp"
            android:paddingTop="10dp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeStepGranularity="2sp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:minLines="3"
            android:hint="@string/include_any_additional_info_about_your_find"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:inputType="text" />

    </LinearLayout>
</ScrollView>